# vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  makefile.bak  project.typ  run.sh  todo.md
assets/shaders/: Makefile  triangle.slang  triangle.vert
docs/: memory.md  multiple_objects.md  vk_flow.org  vulkan.md
playground/: CMakeLists.txt  main.c  main.cpp
src/: CMakeLists.txt  defines.h  defines.hpp  engine.h
src/containers/: vector.c  vector.h
src/core/: application.c  application.cpp  application.h  application.hpp  assert.h  assert.hpp  cc.h  logger.c  logger.cpp  logger.h  logger.hpp  timer.cpp  timer.hpp
src/core/concurrency/: counter_pool.hpp  job_system.cpp  job_system.hpp
src/core/containers/: PooledVector.hpp  static_vector.hpp
src/core/memory/: align_utils.hpp  allocator_base.hpp  destack_allocator.c  destack_allocator.cpp  destack_allocator.h  destack_allocator.hpp  double_buffered_allocator.hpp  memory.hpp  pool_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp
src/core/stl/: FixedPoolResource.hpp  MultipoolMemoryResource.hpp  PoolAdapter.hpp  PoolMemoryResource.hpp  StackMemoryResource.hpp
src/platform/: app_platform.hpp  platform.c  platform.cpp  platform.h  platform.hpp  platform_glfw.c  platform_glfw.cpp  platform_linux.c  platform_linux.cpp  platform_macos.c  platform_macos.cpp  platform_win32.c  platform_win32.cpp  window.c  window.cpp  window.h  window.hpp
src/platform/core/: PlatformContext.hpp  PlatformEntryPoint.hpp
src/platform/input/: glfw_input.cpp  input.hpp  input_example.hpp
src/platform/layer/: layer.cpp  layer.hpp
src/platform/unix/: context.cpp  entrypoint.cpp  platform.cpp  platform.hpp
src/platform/window/: glfw_window.cpp  glfw_window.hpp  headless_window.cpp  headless_window.hpp  window.cpp
src/platform/windows/: context.cpp  context.hpp  entrypoint.cpp
src/renderer/backend/: renderer.cpp  renderer.h  renderer.hpp  renderer_gl.c  renderer_vk.c  shader_loader.cpp
src/renderer/backend/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
src/renderer/backend/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_utils.cpp
src/resource/: material_store.cpp  model_store.cpp  shader_store.cpp  texture_store.cpp
src/scene/: camera.cpp  camera.hpp  camera_controller.cpp
src/types/: game_types.h  game_types.hpp
test/: CMakeLists.txt  README.md  engine_tests.cpp
test/concurrency/: threadpool_tests.cpp
test/memory/: destackalloc_tests.cpp  poolalloc_tests.cpp  stackalloc_tests.cpp
test/resource/: resource_pool_tests.cpp
vge/: CMakeLists.txt
vge/assets/shaders/: Makefile  triangle.slang  triangle.spv
vge/include/: defines.hpp
vge/include/core/: assert.hpp  logger.hpp
vge/include/core/concurrency/: job_system.hpp
vge/include/core/memory/: destack_allocator.hpp  double_buffered_allocator.hpp  memory.hpp
vge/include/core/stl/: DestackMemoryResource.hpp  MultipoolMemoryResource.hpp  PoolAdapter.hpp  StackMemoryResource.hpp
vge/include/platform/: platform.hpp
vge/include/platform/core/: PlatformContext.hpp  PlatformEntryPoint.hpp
vge/include/platform/input/: glfw_input.hpp  input_events.hpp  input_types.hpp
vge/include/platform/layer/: layer.hpp
vge/include/platform/unix/: context.hpp  platform.hpp
vge/include/platform/window/: glfw_window.hpp  headless_window.hpp  window.hpp
vge/include/platform/windows/: platform.hpp
vge/include/renderer/backend/: shader_loader.hpp
vge/include/renderer/backend/vulkan/: vulkan_buffer.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_renderer.hpp  vulkan_swapchain.hpp  vulkan_texture.hpp  vulkan_types.hpp  vulkan_utils.hpp
vge/include/resource/: handle.hpp  resource_descriptor.hpp  resource_pool.hpp  vulkan_resource_descriptions.md
vge/include/scene/: camera.hpp  camera_controller.hpp
vge/src/: TODO.md
vge/src/core/: logger.cpp  timer.cpp
vge/src/core/concurrency/: concurrency.md  job_system.cpp
vge/src/platform/: platform.cpp
vge/src/platform/input/: glfw_input.cpp
vge/src/platform/unix/: context.cpp  entrypoint.cpp  platform.cpp
vge/src/platform/window/: glfw_window.cpp  headless_window.cpp  window.cpp
vge/src/platform/windows/: context.cpp  entrypoint.cpp
vge/src/renderer/backend/: renderer.cpp  shader_loader.cpp
vge/src/renderer/backend/opengl/: opengl_renderer.cpp
vge/src/renderer/backend/vulkan/: vma_usage.cpp  vulkan_buffer.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_utils.cpp
vge/src/scene/: camera.cpp  camera_controller.cpp
